--- a/src/app/pages/media-queue/media-queue.component.scss
+++ b/src/app/pages/media-queue/media-queue.component.scss
@@ -1,11 +1,11 @@
 .page {
-  height: 100%;
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  margin-top: calc(var(--toolbar-height) * -1);
+  padding-top: var(--toolbar-height);
+  min-height: 100vh;
 
   ::ng-deep .mat-mdc-tab-group {
-    height: 100%;
     display: flex;
     flex-direction: column;
 
@@ -15,16 +15,15 @@
 
     .mat-mdc-tab-body-wrapper {
       flex: 1;
-      overflow: hidden;
     }
 
     .mat-mdc-tab-body {
-      overflow: hidden;
+      overflow: visible;
     }
 
     .mat-mdc-tab-body-content {
-      height: 100%;
-      overflow-y: auto;
+      height: auto;
+      overflow: visible;
     }
   }
 
@@ -51,8 +50,9 @@
 }
 
 .tab-content {
-  height: 100%;
-  overflow-y: auto;
+  height: auto;
+  overflow: visible;
+  padding-bottom: 100px;
 }
 
 .queue-artwork {
