--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -1,9 +1,9 @@
 @if (!app.authenticated()) {
 <app-introduction></app-introduction>
 } @else {
-<div class="home-container" [ngClass]="columnLayout()">
+<div class="home-container" #homeContainer [ngClass]="columnLayout()">
   <!-- Header Section -->
-  <header class="header-section">
+  <header class="header-section" [class.header-hidden]="headerHidden()">
     <div class="title-section">
       <!-- Feed Selector -->
       <div class="feed-selector">
